--- a/style.css
+++ b/style.css
@@ -1,18 +1,127 @@
+/* BASIC */
+*{
+  box-sizing: border-box;
+}
+html , body {
+  margin: 0;
+  padding: 0;
+  
+}
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f9f9f9;
+}
+h1 ,h2 {
+  color : #000000cc;
+}
 /* ALINHAMENTO  */
 header ,main , footer {
   text-align: center;
  
 }
- .donors {
+ header button {
+   margin-top: 16px;
+   padding: 8px 16px;
+   border-radius: 4px;
+   border: none;
+   cursor: pointer;
+   background-color: #ff4f4f;
+   color: white;
+   font-weight: bold;
+ }
+ .logo{
+   width: 120px;
+   margin:70px 0 ;
+ }
+/* ESPAÇAMENTO  */
+header, .form , main {
+  margin: 0 auto 70px;
+  width: 90%;
+  max-width: 500px;
+}
+header h1 , main h2 {
+  margin-bottom: 70px;
+
+}
+header p {
+  font-size: 14px;
+}
+
+main h2 span {
+  color: #ff4f4f;
+}
+
+.form h2 {
+  text-align: right;
+  color:#f8f8f8;
+  font-size: 18px;
+
+}
+section.form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 45px;
+  align-items: center;
+  background-color: #ff4f4f;
+  padding: 16px 64px;
+  border-radius: 6px;
+ 
+}
+form input ,
+form button {
+  width: 100%;
+  margin-bottom: 4px;
+  box-sizing: border-box;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px #ffffff88 solid;
+
+
+}
+form input{
+  background-color: transparent;
+}
+form input::placeholder {
+  color:#ffffffaa;
+}
+form button {
+  font-weight: bold;
+}
+main .donors {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-.form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-/* ESPAÇAMENTO  */
-header, .form , main {
-  margin-bottom: 70px;
+.blood {
+  color:#ff4f4f;
+  font-weight: bold;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
   
+}
+.blood::before {
+  content: "";
+  background-color: #ff4f4f11;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+/* gota*/
+border-radius: 50%;
+border-top-right-radius: 0 ;
+transform: rotate(-45deg); 
+}
+footer {
+  margin-top: auto;
+  padding: 16px;
+  border: 1px solid #eee;
+}
+.donors p {
+  margin-top: 24px;
+  font-size: 14px;
 }
