--- a/style.css
+++ b/style.css
@@ -125,3 +125,13 @@ footer {
   margin-top: 24px;
   font-size: 14px;
 }
+/* Funciton of JS*/
+section.form{
+  transition: all 200ms;
+}
+section.form.hide{
+  opacity: 0;
+  visibility: hidden;
+  height: 0;
+  margin-top: -70px;
+}
